Archive/66f3ded69d5c43c83c39bffc65bb3ad4-61c3814520a8d4318f681038dc4b4da7/output
main.cpp:8:1: error: 'Outer<T>::Outer' names the constructor, not the type
 Outer<T>::Outer<T>() {}
 ^
main.cpp:8:1: error: and 'Outer<T>' has no template constructors
main.cpp:12:37: error: 'typename Outer<T>::Inner* Outer<T>::x' is not a static member of 'class Outer<T>'
 typename Outer<T>::Inner* Outer<T>::x = 0;
                                     ^
main.cpp:12:37: error: template definition of non-template 'typename Outer<T>::Inner* Outer<T>::x'
